--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Poke BMI</title>
-  <link rel="stylesheet" "href= ../../node_modules/normalize.css/normalize.css">
+  <link rel="stylesheet" href="../../node_modules/normalize.css/normalize.css">
+  <link rel="stylesheet" href="../styles/styles.css">
 </head>
 
 <body>
@@ -14,12 +15,12 @@
       <h1 id="pokemonName">Pokemon Name</h1>
       <h2 id="bmiCategory">BMI Category</h2>
     </span>
-    <img id="sprite" src="https://via.placeholder.com/150" />
-    <form id="pokemonForm" onsubmit="handleFormSubmit(event)">
+    <img id="sprite" src="https://via.placeholder.com/96" />
+    <form id="controls" onsubmit="handleFormSubmit(event)">
       <input id="pokemonNameSearch" type="search" name="pokemonName" placeholder="Pokemon name..." />
       <input id="pokemonFormSubmit" type="submit" />
+      <input type="button" value="Shuffle" onclick="handleRandom(event)" />
     </form>
-    <input type="button" value="Shuffle" onclick="handleRandom(event)" />
   </main>
 
   <script type="text/javascript" src="../scripts/index.js"></script>
