Fix Relative Paths in index.html After Moves

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Poke BMI</title>
   <link rel="stylesheet" href="../../node_modules/normalize.css/normalize.css">
-  <link rel="stylesheet" href="../styles/styles.css">
+  <link rel="stylesheet" href="styles/styles.css">
 
   <!-- Google sheets -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,5 +28,5 @@
     </form>
   </main>
 
-  <script type="text/javascript" src="../scripts/index.js"></script>
+  <script type="text/javascript" src="scripts/index.js"></script>
 </body>
